--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Calculator</string>
     <string name="action_settings">Settings</string>
+    <string name="help_instructions">Enter two numbers:</string>
+    <string name="result">Result:</string>
 </resources>
