--- a/Top10Downloader/app/src/main/res/values/strings.xml
+++ b/Top10Downloader/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Top 10 Downloader</string>
     <string name="action_settings">Settings</string>
+    <string name="title">Parse XML File</string>
 </resources>
