--- a/YoutubeApp/app/src/main/res/values/strings.xml
+++ b/YoutubeApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_youtube">YoutubeActivity</string>
     <string name="title_activity_standalone">StandaloneActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
