--- a/PostmatesClone/app/src/main/res/values/strings.xml
+++ b/PostmatesClone/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
     <string name="signing_in">Signing in!</string>
-    <string name="title_activity_adadfa">adadfa</string>
     <string name="action_logout">Log Out</string>
+    <string name="title_activity_google_map">Map</string>
 </resources>
